--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 description = ""
 authors = ["marynag <mgrabchak1109@gmail.com>"]
 readme = "README.md"
-packages = [{include = "beam_santory_ml"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 filetype = "^1.2.0"
 ultralytics = "^8.0.158"
 cython = "^3.0.0"
+flask = "^2.3.3"
+torch = ">=2.0.0, !=2.0.1"
 
 
 [build-system]
