--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "app:app",
+                "FLASK_APP": "wsgi:app",
                 "FLASK_DEBUG": "1"
             },
             "args": [
